--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,14 @@ edition = "2021"
 argh = "0.1.13"
 serde = { version = "1", features = ["derive"] }
 serde_yml = "0.0.12"
+serde_json = "1.0.149"
 russh = { version = "0.56", default-features = false, features = ["aws-lc-rs"] }
 russh-sftp = "2.0"
 tokio = { version = "1", features = ["rt", "net", "time", "io-util", "macros", "process", "sync", "signal"] }
 colored = "3"
+
+[build-dependencies]
+cc = "1.2.27"
 
 [[bin]]
 name = "vci"
