--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,20 +83,20 @@ jobs:
           name: virtci-linux-x86_64
           path: virtci-linux-x86_64.tar.gz
 
-  release:
-    needs: [build-macos, build-linux-x64, build-macos-bootstrap]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-          merge-multiple: true
+  # release:
+  #   needs: [build-macos, build-linux-x64, build-macos-bootstrap]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         path: artifacts
+  #         merge-multiple: true
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        with:
-          generate_release_notes: true
-          files: |
-            artifacts/virtci-apple-darwin.tar.gz
-            artifacts/virtci-linux-x86_64.tar.gz
-            artifacts/virtci-macos.tar.gz
+  #     - name: Create GitHub Release
+  #       uses: softprops/action-gh-release@v2
+  #       with:
+  #         generate_release_notes: true
+  #         files: |
+  #           artifacts/virtci-apple-darwin.tar.gz
+  #           artifacts/virtci-linux-x86_64.tar.gz
+  #           artifacts/virtci-macos.tar.gz
