--- a/package/mac_package.yml
+++ b/package/mac_package.yml
@@ -14,7 +14,7 @@ macos-arm64:
 
     - name: Install Rust targets
       run: |
-        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
+        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -y
         rustup target add x86_64-apple-darwin
         rustup target add aarch64-apple-darwin
 
