separate rust install with rustup steps

--- a/package/mac_package.yml
+++ b/package/mac_package.yml
@@ -12,9 +12,11 @@ macos-arm64:
             - .github
             - docs
 
+    - name: Install Rust
+      run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+
     - name: Install Rust targets
       run: |
-        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
         rustup target add x86_64-apple-darwin
         rustup target add aarch64-apple-darwin
 
