--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,38 +10,38 @@ permissions:
   contents: write
 
 jobs:
-  build-macos:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
+  # build-macos:
+  #   runs-on: macos-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Install Rust targets
-        run: |
-          rustup target add x86_64-apple-darwin
-          rustup target add aarch64-apple-darwin
+  #     - name: Install Rust targets
+  #       run: |
+  #         rustup target add x86_64-apple-darwin
+  #         rustup target add aarch64-apple-darwin
 
-      - name: Build aarch64
-        run: cargo build --release --target aarch64-apple-darwin
+  #     - name: Build aarch64
+  #       run: cargo build --release --target aarch64-apple-darwin
 
-      - name: Build x86_64
-        run: cargo build --release --target x86_64-apple-darwin
+  #     - name: Build x86_64
+  #       run: cargo build --release --target x86_64-apple-darwin
 
-      - name: Create fat binary
-        run: |
-          lipo -create \
-            target/aarch64-apple-darwin/release/virtci \
-            target/x86_64-apple-darwin/release/virtci \
-            -output virtci
-          chmod +x virtci
+  #     - name: Create fat binary
+  #       run: |
+  #         lipo -create \
+  #           target/aarch64-apple-darwin/release/virtci \
+  #           target/x86_64-apple-darwin/release/virtci \
+  #           -output virtci
+  #         chmod +x virtci
 
-      - name: Package
-        run: tar czf virtci-apple-darwin.tar.gz virtci
+  #     - name: Package
+  #       run: tar czf virtci-apple-darwin.tar.gz virtci
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: virtci-apple-darwin
-          path: virtci-apple-darwin.tar.gz
+  #     - name: Upload artifact
+  #       uses: actions/upload-artifact@v4
+  #       with:
+  #         name: virtci-apple-darwin
+  #         path: virtci-apple-darwin.tar.gz
 
   build-macos-bootstrap:
     runs-on: 
