--- a/package/linux_x64_package.yml
+++ b/package/linux_x64_package.yml
@@ -16,10 +16,10 @@ ubuntu-server-x64:
       run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
 
     - name: Build
-      run: cargo build --release
+      run: . "$HOME/.cargo/env" && cargo build --release
 
     - name: Package
-      run: tar czf virtci-linux-x64.tar.gz virtci
+      run: tar czf virtci-linux-x64.tar.gz -C target/release virtci
 
     - name: Copy Files
       copy:
