local path executable

--- a/package/windows_x64_package.yml
+++ b/package/windows_x64_package.yml
@@ -13,7 +13,7 @@ win-11-x64:
             - docs
 
     - name: Install Rust
-      run: curl -o rustup-init.exe https://win.rustup.rs/x86_64; rustup-init.exe -y
+      run: curl -o rustup-init.exe https://win.rustup.rs/x86_64; .\rustup-init.exe -y
 
     - name: Build
       run: cargo build --release
