--- a/package/windows_x64_package.yml
+++ b/package/windows_x64_package.yml
@@ -18,11 +18,8 @@ win-11-x64:
     - name: Install Chocolatey
       run: Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
 
-    - name: Install NASM
-      run: choco install nasm -y
-
-    - name: Build
-      run: cargo build --release
+    - name: Install NASM and Build
+      run: choco install nasm -y; refreshenv; cargo build --release
 
     - name: Package
       run: tar czf virtci-windows-x64.tar.gz -C target/release virtci.exe
