--- a/package/linux_arm64_package.yml
+++ b/package/linux_arm64_package.yml
@@ -11,6 +11,7 @@ ubuntu-arm64:
             - .git
             - .github
             - docs
+            - target
 
     - name: Install Rust
       run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
