--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "GPL-2.0-only"
 [dependencies]
 argh = "0.1.13"
 serde = { version = "1", features = ["derive"] }
-serde_yml = "0.0.12"
+serde_yaml_ng = "0.10"
 serde_json = "1.0.149"
 russh = { version = "0.56", default-features = false, features = ["aws-lc-rs"] }
 russh-sftp = "2.0"
