--- a/deny.toml
+++ b/deny.toml
@@ -23,6 +23,10 @@ allow = [
 allow = ["LGPL-2.1-or-later"]
 crate = "mp4parse"
 
+[[licenses.exceptions]]
+allow = ["OpenSSL"]
+crate = "aws-lc-sys"
+
 [bans]
 multiple-versions = "warn"
 wildcards = "deny"
