--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,9 @@ tokio = { version = "1", features = [
 ] }
 colored = "3"
 tar = "0.4"
+rust-embed = "8"
+mime_guess = "2"
+tiny_http = "0.12"
 
 [build-dependencies]
 cc = "1.2.27"
