--- a/package/mac_package.yml
+++ b/package/mac_package.yml
@@ -21,6 +21,14 @@ macos-arm64:
         rustup target add x86_64-apple-darwin
         rustup target add aarch64-apple-darwin
 
+    - name: Install Node and NPM
+      run: curl -fsSL https://nodejs.org/dist/latest-v22.x/node-v22.14.0-darwin-x64.tar.xz | tar -xJ -C /usr/local --strip-components=1
+
+    - name: Install NPM Dependencies
+      run: |
+        cd web
+        npm install
+
     - name: Build aarch64
       run: cargo build --release --target aarch64-apple-darwin
 
