--- a/package/windows_x64_package.yml
+++ b/package/windows_x64_package.yml
@@ -19,8 +19,16 @@ win-11-x64:
     - name: Install Chocolatey
       run: Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
 
-    - name: Install NASM and Build
-      run: choco install nasm -y; $env:Path = "C:\Program Files\NASM;$env:Path"; cargo build --release
+    - name: Install Dependencies
+      run: choco install llvm nodejs nasm -y
+
+    - name: Install NPM Dependencies
+      run: |
+        cd web
+        npm install
+
+    - name: Build
+      run: $env:Path = "C:\Program Files\NASM;C:\Program Files\LLVM\bin;$env:Path"; cargo build --release
 
     - name: Package
       run: tar czf virtci-windows-x64.tar.gz -C target/release virtci.exe
