--- a/test/virtci/cargo.yml
+++ b/test/virtci/cargo.yml
@@ -21,6 +21,16 @@ ubuntu-server-x64:
       sudo apt update
       sudo apt install clang-format -y
 
+  - name: Install Node and NPM
+    run: |
+      sudo apt update
+      sudo apt install  -y -qq nodejs npm
+
+  - name: Install NPM Dependencies
+    run: |
+      cd web
+      npm install
+
   - name: Install cargo-deny
     run: . "$HOME/.cargo/env" && cargo install cargo-deny
 
